@@ -1,3 +1,8 @@
+2020-03-06 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/gattrib.c: Revise main to replace gtk_main with g_main_loop_run.
+      Eliminate calling gtk_main_quit in gattrib_quit.
+
 2019-12-31 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/s_table.c: Rename STRING_LIST pointer list_element iter in
